Inclusao de repositorio. Inclusao de plugins.